# gup_raytracer

./: .gitignore  CMakeLists.txt  README.md
src/Interfaces/: raytracer.h
src/brdfs/: blinn.cpp  blinn.h  brdf.h  lambertian.cpp  lambertian.h  phong.cpp  phong.h
src/build_funcs/: bb_cover_pic.cpp  build_bb_cover_pic.cpp  build_double_sphere.cpp  build_function_2d.cpp  build_multiple_objects.cpp  build_single_plane.cpp  build_single_sphere.cpp  build_sinusoid_func.cpp  build_two_sphere_and_lights.cpp  multiple_objects.cpp  rectangle_area_light.cpp  sphere_on_plane.cpp  two_sphere_and_lights.cpp
src/cameras/: camera.cpp  camera.h  fisheye.cpp  fisheye.h  pinhole.cpp  pinhole.h  spherical.cpp  spherical.h  spherical_projection.cpp  spherical_projection.h  thin_lens.cpp  thin_lens.h
src/geometry/: geometry.cpp  geometry.h  plane.cpp  plane.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h
src/interfaces/: raytracer.cpp  raytracer.h
src/lights/: ambient.cpp  ambient.h  ambient_occluder.cpp  ambient_occluder.h  area.cpp  area.h  directional.cpp  directional.h  light.h  point.cpp  point.h
src/materials/: emissive.cpp  emissive.h  glossy.cpp  glossy.h  material.h  matte.cpp  matte.h  plastic.cpp  plastic.h
src/samplers/: hammersley.cpp  hammersley.h  jittered.cpp  jittered.h  multi_jittered.cpp  multi_jittered.h  random.cpp  random.h  regular.cpp  regular.h  rooks.cpp  rooks.h  sampler.cpp  sampler.h
src/tracers/: area_lighting.cpp  area_lighting.h  function.cpp  function.h  function_2d.cpp  function_2d.h  multiple_objects.cpp  multiple_objects.h  raycast.cpp  raycast.h  single_sphere.cpp  single_sphere.h  tracer.cpp  tracer.h
src/utilities/: constants.h  maths.h  matrix.cpp  matrix.h  normal.cpp  normal.h  point.cpp  point.h  point_3d.cpp  point_3d.h  random.h  ray.cpp  ray.h  rgb_color.cpp  rgb_color.h  shade_rec.cpp  shade_rec.h  vector.cpp  vector.h  vector_3d.cpp  vector_3d.h
src/world/: world.cpp  (+3 more)
